fixed header and main tag separations as well as z-index for instructions

--- a/clicky-game/src/components/Header/style.css
+++ b/clicky-game/src/components/Header/style.css
@@ -2,6 +2,7 @@
 
 header {
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+  z-index: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -33,6 +34,7 @@ h2 {
   position: absolute;
   top: 50%;
   width: 100%;
+  z-index: -1;
 }
 
 #banner #instructions .col {
